// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DELETE /api/admin/usuarios (caracterización) > 200: borra con id string y autoCommit 1`] = `
[
  {
    "binds": {
      "id": "7",
    },
    "options": {
      "autoCommit": true,
    },
    "sql": "DELETE FROM USUARIOS WHERE ID_USU = :id",
  },
]
`;

exports[`GET /api/admin/usuarios (caracterización) > 200 con las filas tal cual (comportamiento actual: sin autenticación) 1`] = `
[
  {
    "binds": undefined,
    "options": undefined,
    "sql": "
      SELECT ID_USU as "id", NOMBRE_USU as "nombre", APELLIDO_USU as "apellido", CORREO_USU as "correo"
      FROM USUARIOS
      ORDER BY NOMBRE_USU ASC
    ",
  },
]
`;

exports[`POST /api/admin/usuarios (caracterización) > 201: calcula MAX+1, inserta con perfil 2 y correo sin normalizar (comportamiento actual) 1`] = `
[
  {
    "binds": undefined,
    "options": undefined,
    "sql": "SELECT NVL(MAX(ID_USU), 0) + 1 as "nextId" FROM USUARIOS",
  },
  {
    "binds": {
      "apellido": "PÉREZ",
      "contrasena": "Secreta1",
      "correo": " Ana@X.CO ",
      "id": 42,
      "nombre": "ANA",
    },
    "options": {
      "autoCommit": true,
    },
    "sql": "
      INSERT INTO USUARIOS (ID_USU, NOMBRE_USU, APELLIDO_USU, CORREO_USU, CONTRASENA_USU, PERFIL_ID_PER)
      VALUES (:id, :nombre, :apellido, :correo, :contrasena, 2)
    ",
  },
]
`;

exports[`PUT /api/admin/usuarios (caracterización) > 200: actualiza con id string y nombres en mayúsculas 1`] = `
[
  {
    "binds": {
      "apellido": "PÉREZ",
      "correo": " Ana@X.CO ",
      "id": "7",
      "nombre": "ANA",
    },
    "options": {
      "autoCommit": true,
    },
    "sql": "
      UPDATE USUARIOS 
      SET NOMBRE_USU = :nombre, APELLIDO_USU = :apellido, CORREO_USU = :correo 
      WHERE ID_USU = :id
    ",
  },
]
`;
